Working in inventory, more css classes made, reports page made

--- a/src-frontend/css/index.css
+++ b/src-frontend/css/index.css
@@ -92,7 +92,7 @@ table {
 th, td {
     padding: 12px 20px;
     text-align: center;
-    border-right: 1px solid #e0e0e0;
+    border-right: 1px solid #ff0000;
     transition: background-color 0.2s ease, box-shadow 0.3s ease;
 }
 
